src/projects.css
.title-box {
    display: flex;
    margin: 0 auto;
    justify-content: center;
    background-color: #dbebeb;
}

.title-box-inner {
    width: 70%;
}

.project-list-title {
    padding: 20px 10px;
    
    font-size: 2rem;
    font-weight: bold;
}


.projects-container {
    display: flex;
    justify-content: center;
    background-color: #dbebeb;
}


.projects-list {
    display: flex;
    flex-direction: column;
    width: 70%;
    gap: 40px;
    margin-top: 10px;
    margin-bottom: 40px;
}

/*project container*/
.project {
    display: grid;
    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);/* Adjust image width as needed */
    height: 45vh;
    gap: 35px;
    padding: 24px;
    border-radius: 20px;
    border: 4px solid #000;
    background: #fff;
}

.project-image {
    margin-top: 15px;
    width: 100%;
    aspect-ratio: 16/9; 

    /* center img */
    display: flex;
    justify-content: center;
    align-items: center;
}

.project-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 10px;
    box-shadow: 0 0 10px #4f4f4f;
}

.project-content {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.project-header {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.project-title {
    margin: 0;
    font-size: 2rem;
}

.project-tags {
    display: flex;
    gap: 15px;
}

.tag {
    padding: 2px 12px;
    background-color: #dbebeb;
    border-radius: 16px;
    font-size: 1rem;
    font-weight: bold;
}

.project-description {
    margin: 0;
    line-height: 1.5;
    margin-top: 8px;
    font-size: 1.5rem;
}



.project-button {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    padding: 5px 15px;
    background-color: #fff;
    color: #000;
    border-radius: 6px;
    font-size: 1rem;
    cursor: pointer;
    border: 2px solid #000;
    text-decoration: none;
    transition: background-color 0.3s, color 0.3s;
    margin-top: 10px;
    font-weight: bold;
}

.project-button:hover {
    background-color: #cad589;
    color: #000;
}

.project-links {
    display: flex;
    gap: 15px;
}


@media (min-width: 1920px) {
    .project-list-title {
        font-size: 2.5rem;
    }

    .project {
        height: 50vh;
    }

    .project-title {
        font-size: 2.5rem;
    }

    .project-tags {
        gap: 20px;
    }

    .tag {
        padding: 2px 15px;
        font-size: 1.5rem;
    }

    .project-description {
        font-size: 1.8rem;
    }

    .project-button {
        padding: 6px 20px;
        font-size: 1.5rem;
    }
}


/* Media query for smaller screens */
@media (max-width: 1440px) {
    .project-list-title {
        font-size: 1.8rem;
    }

    .project {
        grid-template-columns: 1fr;
        height: auto; 
        gap: 20px; 
    }

    .project-image {
        margin-top: 0; 
    }

    .project-title {
        font-size: 2rem; 
    }

    .tag {
        padding: 2px 10px; 
        font-size: 1.2rem; 
    }

    .project-description {
        font-size: 1.5rem; 
    }
    
    .project-button {
        padding: 4px 12px; 
        font-size: 1.2rem; 
    }
}

@media (max-width: 1250px) {
    .title-box-inner {
        width: 80%;
    }

    .projects-list {
        width: 80%;
    }
}

@media (max-width: 950px) {
    .project-list-title {
        font-size: 1.5rem;
    }

    .project-title {
        font-size: 1.5rem;
    }

    .tag {
        padding: 2px 8px;
        font-size: 1rem;
    }

    .project-description {
        font-size: 1.3rem;
    }

    .project-button {
        padding: 4px 10px;
        font-size: 1rem;
    }
}


@media (max-width: 700px) {
    .project-list-title {
        font-size: 1.3rem;
    }

    .project-title {
        font-size: 1.3rem;
    }

    .tag {
        padding: 2px 6px;
        font-size: 0.9rem;
    }
    
    .project-description {
        font-size: 1.1rem;
    }

    .project-button {
        padding: 4px 8px;
        font-size: 0.9rem;
    }
}

